# OwlynBackend

./: .gitignore  Documentaion.md  LICENSE  README.md  pom.xml
interviewAgent/: main.py  pyproject.toml
src/main/java/com/owlynbackend/: OwlynBackendApplication.java
src/main/java/com/owlynbackend/config/: AsyncConfig.java  GeminiConfig.java  GeneralConfig.java  GlobalExceptionHandler.java  UploadResourceConfig.java
src/main/java/com/owlynbackend/config/logging/: LoggingAspect.java
src/main/java/com/owlynbackend/config/security/: JwtAuthFilter.java  JwtManager.java  (+2 more)
src/main/java/com/owlynbackend/controller/: AIPersonaController.java  AuthController.java  CopilotController.java  HealthController.java  InternalReportController.java  InterviewController.java  PublicReportController.java  PublicSessionController.java  ReportController.java  WorkspaceController.java
src/main/java/com/owlynbackend/services/: AIPersonaService.java  AssessorAgentService.java  AuthService.java  CopilotService.java  DocumentExtractionService.java  GeminiAgentService.java  InterviewReportService.java  InterviewService.java  LiveKitTokenService.java  OtpService.java  PublicSessionService.java  WorkspaceService.java
src/main/resources/: application.properties.example
src/test/java/com/owlynbackend/: AuthControllerIT.java  AuthServiceTest.java  OwlynBackendApplicationTests.java
src/test/java/com/owlynbackend/controller/: InterviewControllerIT.java  Phase3GatewayIT.java  WorkspaceControllerIT.java
src/test/java/com/owlynbackend/services/: OtpServiceTest.java  WorkspaceServiceTest.java
(+44 files in other folders)
