[project]
name = "interviewagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "google-genai>=1.66.0",
    "livekit-agents>=1.4.4",
    "livekit-plugins-google>=1.4.4",
    "livekit-plugins-silero>=1.4.4",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
]
